# prototype

./: Cargo.toml  README.md  prototype_config.example.json
src/: main.rs  templates.rs
src/templates/: node.rs  react.rs
